# rcvs-web

./: Cargo.toml  LICENSE  README.md  about.html  model.sql  result.html  vote.html
src/: data.rs  html_interface.rs  main.rs  model.rs  result_data.rs
