[package]
name = "rcvs-web"
version = "0.1.0"
authors = ["Pierre Colin"]
edition = "2018"
description = "A web service for the Randomized Condorcet Voting System"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-files = "0.2"
actix-rt = "1.1"
mime = "0.3"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rcvs = { git = "https://github.com/Pierre-Colin/rcvs" }
