[package]
name = "rcvs-web"
version = "0.1.0"
authors = ["Pierre Colin"]
edition = "2018"
description = "A web service for the Randomized Condorcet Voting System"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1"
actix-files = "0.4"
actix-rt = "1.1"
mime = "0.3"
rand = "0.7"
rand_pcg = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.24"
rcvs = { git = "https://github.com/Pierre-Colin/rcvs" }
# qlock = { git = "https://github.com/Pierre-Colin/qlock" }
